--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
 # Database (PostgreSQL Neon)
-DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+DATABASE_URL="postgresql://neondb_owner:npg_MjJ36TdgpuoH@ep-damp-block-ai4nfjw9-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 # Scheduler (HH:MM format or cron)
 CRON_SCHEDULE=02:00
 
 # Data directory
 DATA_DIR=./data
-
-# Groq API for LangChain Agent
-# Get your API key at: https://console.groq.com/
-GROQ_API_KEY=your_groq_api_key_here
